[package]
name = "hakoniwa-cli"
version = "1.1.2"
description = "Process isolation for Linux using namespaces, resource limits and seccomp."
keywords = ["security", "sandbox", "seccomp", "process"]
homepage = "https://github.com/souk4711/hakoniwa"
repository = "https://github.com/souk4711/hakoniwa"
include = ["src/**/*", "LICENSE", "../README.md"]
license = "GPL-3.0-only"
readme = "../README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.6"
log = "0.4.25"
minijinja = "2.8.0"
nix = { version = "0.29.0", features = ["user"] }
rust-embed = "8.6.0"
serde = "1.0.218"
serde_json = "1.0.140"
toml = "0.8.20"

[dependencies.hakoniwa]
version = "1.1.2"
path = "../hakoniwa"
features = ["seccomp"]

[dev-dependencies]
trycmd = "0.15.9"

[[bin]]
name = "hakoniwa"
path = "src/main.rs"
