[package]
name = "hakoniwa-cli"
version = "1.1.7"
description = "Process isolation for Linux using namespaces, resource limits, landlock and seccomp."
keywords = ["security", "sandbox", "landlock", "seccomp", "process"]
homepage = "https://github.com/souk4711/hakoniwa"
repository = "https://github.com/souk4711/hakoniwa"
include = ["src/**/*", "LICENSE", "../README.md"]
license = "GPL-3.0-only"
readme = "../README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
clap_complete = "4.5.47"
cruet = "0.15.0"
env_logger = "0.11.6"
glob = "0.3.2"
log = "0.4.25"
minijinja = { version = "2.8.0", features = ["loader"] }
nix = { version = "0.30.1", features = ["user"] }
rust-embed = "8.6.0"
serde = "1.0.218"
serde_json = "1.0.140"
toml = "0.8.20"

[dependencies.hakoniwa]
version = "1.1.7"
path = "../hakoniwa"
features = ["landlock", "seccomp"]

[dev-dependencies]
trycmd = "0.15.9"

[[bin]]
name = "hakoniwa"
path = "src/main.rs"
