[package]
name = "hakoniwa-cli"
version = "1.2.1"
description = "Process isolation for Linux using namespaces, resource limits, landlock and seccomp."
keywords = ["security", "sandbox", "landlock", "seccomp", "process"]
categories = ["security"]
homepage = "https://github.com/souk4711/hakoniwa"
repository = "https://github.com/souk4711/hakoniwa"
include = ["src/**/*", "LICENSE", "../README.md"]
license = "GPL-3.0-only"
readme = "../README.md"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
clap_complete = "4.5.55"
env_logger = "0.11.8"
glob = "0.3.2"
log = "0.4.27"
minijinja = { version = "2.11.0", features = ["loader"] }
nix = { version = "0.30.1", features = ["user"] }
rust-embed = "8.7.2"
serde = "1.0.219"
serde_json = "1.0.140"
toml = "0.9.3"

[dependencies.hakoniwa]
version = "1.2.1"
path = "../hakoniwa"
features = ["landlock", "seccomp"]

[dev-dependencies]
trycmd = "0.15.10"

[[bin]]
name = "hakoniwa"
path = "src/main.rs"
