[package]
name = "hakoniwa"
version = "1.1.3"
description = "Process isolation for Linux using namespaces, resource limits, landlock and seccomp."
keywords = ["security", "sandbox", "landlock", "seccomp", "process"]
homepage = "https://github.com/souk4711/hakoniwa"
repository = "https://github.com/souk4711/hakoniwa"
include = ["src/**/*", "LICENSE", "../README.md"]
license = "LGPL-3.0 WITH LGPL-3.0-linking-exception"
readme = "../README.md"
edition = "2021"

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bitflags = "2.8.0"
landlock = { version = "0.4.1", optional = true }
libc = "0.2.169"
libseccomp = { version = "0.3.0", optional = true }
log = "0.4.27"
nix = { version = "0.29.0", features = ["fs", "hostname", "mount", "process", "resource", "sched", "signal", "term", "user"] }
os_pipe = "1.2.1"
serde = { version = "1.0.217", features = ["derive"] }
tempfile = "3.16.0"
thiserror = "2.0.11"

[dev-dependencies]
assertables = "9.5.0"

[features]
default = []
landlock = ["dep:landlock"]
seccomp = ["dep:libseccomp"]

[package.metadata.docs.rs]
all-features = true
