[package]
name = "hakoniwa"
version = "1.2.2"
description = "Process isolation for Linux using namespaces, resource limits, landlock and seccomp."
keywords = ["security", "sandbox", "container", "process"]
categories = ["security"]
homepage = "https://github.com/souk4711/hakoniwa"
repository = "https://github.com/souk4711/hakoniwa"
include = ["src/**/*", "LICENSE", "../README.md"]
license = "LGPL-3.0 WITH LGPL-3.0-linking-exception"
readme = "../README.md"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
bitflags = "2.9.2"
caps = "0.5.5"
landlock = { version = "0.4.2", optional = true }
libc = "0.2.175"
libseccomp = { version = "0.4.0", optional = true }
log = "0.4.27"
nix = { version = "0.30.1", features = ["fs", "hostname", "mount", "ptrace", "process", "resource", "sched", "signal", "term", "user"] }
procfs = "0.17.0"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
thiserror = "2.0.15"

[dev-dependencies]
assertables = "9.8.2"
regex = "1.11.1"

[features]
default = []
landlock = ["dep:landlock"]
seccomp = ["dep:libseccomp"]

[package.metadata.docs.rs]
all-features = true
